--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
+    "open-simplex-noise": "^2.4.0-pre4",
+    "route-parser": "0.0.5",
     "vue": "^2.6.12",
     "yaml": "^1.10.0"
   }
