--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "open-simplex-noise": "^2.4.0-pre4",
+    "pinyin-engine": "^1.1.0",
     "route-parser": "0.0.5",
     "vue": "^2.6.12",
     "yaml": "^1.10.0"
