--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
-    "open-simplex-noise": "^2.4.0-pre4",
-    "pinyin-engine": "^1.1.0",
+    "chinese-to-pinyin": "^1.3.1",
     "route-parser": "0.0.5",
     "vue": "^2.6.12",
     "yaml": "^1.10.0"
