--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "chinese-to-pinyin": "^1.3.1",
+    "es6-template-strings": "^2.0.1",
     "route-parser": "0.0.5",
     "vue": "^2.6.12",
     "yaml": "^1.10.0"
