--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-runtime": "^6.26.0",
     "chinese-to-pinyin": "^1.3.1",
     "es6-template-strings": "^2.0.1",
+    "fuzzy": "^0.1.3",
     "route-parser": "0.0.5",
     "vue": "^2.6.12",
     "yaml": "^1.10.0"
